Now shows signatures!

--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
     <p id="novalerr" class="my-3 bg-blue-500 rounded-full text-white w-fit m-auto p-1 text-1xl text-center">No user is set, when you type in a user and press enter the information will appear</p>
     <div id="usercontent" class="bg-gray-200 m-auto invisible">
         <div class="bg-gray-200 h-screen w-screen" id="header">
-            <div id="changethiscolor" class="rounded-b-lg text-white h-fit bg-blue-500">&nbsp;
+            <div id="changethiscolor" class=" text-white h-fit bg-blue-500">&nbsp;
                 <div class="flex">
                     <img class="rounded-full" height="30" width="70" id="pfp"></img>&nbsp;
                     <h1 class="bg-white rounded-full p-3 text-4xl my-auto" id="username"></h1>
                 </div>
                 <p class="text-2xl text-center" id="motd" class="text-3xl "></p>
+            </div>
+            <div class="bg-indigo-500 rounded-lg m-auto w-fit my-3 p-1 text-white">
+                <p id="signature"></p>
             </div>
             <div class="bg-red-500 m-auto w-fit my-3 rounded-full p-1 text-white flex">
                 <label>Favorite Topic:</label>&nbsp;
