--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <img class="rounded-full" height="30" width="70" id="pfp"></img>&nbsp;
                     <h1 class="bg-white rounded-full p-3 text-4xl my-auto" id="username"></h1>
                 </div>
-                <p class="text-2xl text-center" id="motd" class="text-3xl "></p>
+                <p class="text-2xl text-center" onClick="refreshStat()" id="motd" class="text-3xl "></p>
             </div>
             <div class="bg-indigo-500 rounded-lg m-auto w-fit my-3 p-1 text-white">
                 <p id="signature"></p>
