--- a/index.html
+++ b/index.html
@@ -13,39 +13,47 @@
 
 <body>
     <div class="p-3 bg-blue-500 text-white" id="header">
-        <h1>My Scratch Page by JaydenDev, (v0.3)</h1>
+        <h1>MyScratchPage</h1>
     </div>
-    <input class="bg-gray-200 rounded-b-lg m-auto p-3 w-full outline-0" id="input" type="text" placeholder="Enter text here">
+    <input class="bg-gray-200 rounded-b-lg m-auto p-3 w-full outline-0" id="input" type="text" placeholder="Username">
     <br>
     <p id="novalerr" class="my-3 bg-blue-500 rounded-full text-white w-fit m-auto p-1 text-1xl text-center">No user is set, when you type in a user and press enter the information will appear</p>
-    <div id="usercontent" class="bg-gray-200 m-auto invisible">
-        <div class="bg-gray-200 w-screen" id="header">
-            <div id="changethiscolor" class=" text-white bg-blue-500">&nbsp;
+    <div id="usercontent" class="m-auto invisible">
+        <div class=" w-screen" id="header">
+            <div id="changethiscolor" class=" text-white bg-blue-500 ">&nbsp;
                 <div class="flex">
-                    <img class="rounded-full" height="30" width="70" id="pfp"></img>&nbsp;
-                    <h1 class="bg-white rounded-full p-3 text-4xl my-auto" id="username"></h1>
+                    <img class="rounded-full " height="30 " width="70 " id="pfp"></img>&nbsp;
+                    <h1 class="bg-white rounded-full p-3 text-4xl my-auto " id="username"></h1>
                 </div>
-                <p class="text-2xl text-center" onClick="refreshStat()" id="motd" class="text-3xl "></p>
+                <p class="text-2xl text-center " onClick="refreshStat() " id="motd" class="text-3xl "></p>
             </div>
-            <div class="bg-indigo-500 rounded-lg m-auto w-fit my-3 p-1 text-white">
+            <div class="bg-indigo-500 rounded-lg m-auto w-fit my-3 p-1 text-white ">
                 <p id="signature"></p>
             </div>
-            <div class="bg-red-500 m-auto w-fit my-3 rounded-full p-1 text-white flex">
+            <div class="bg-red-500 m-auto w-fit my-3 rounded-full p-1 text-white flex ">
                 <label>Favorite Topic:</label>&nbsp;
                 <p id="mostPostedForum"></p>
             </div>
-            <div class="bg-orange-500 m-auto w-fit my-3 rounded-full p-1 text-white flex">
+            <div class="bg-orange-500 m-auto w-fit my-3 rounded-full p-1 text-white flex ">
                 <label>Total Posts:</label>&nbsp;
                 <p id="totalPosts"></p>
             </div>
         </div>
     </div>
-    <div id="popup" class="fixed bottom-0 m-2 p-2 animate-bounce text-white left:0 w-fit bg-indigo-500 rounded-md shadow-sm">
+    <!-- <div id="popup" class="fixed bottom-0 m-2 p-2 animate-bounce text-white left:0 w-fit bg-indigo-500 rounded-md shadow-sm ">
         <article>
-            <button onClick="closePopup()" class="text-white rounded-sm">X</button>
+            <button onClick="closePopup()" class="text-white rounded-sm ">X</button>
             <h1>Get a dynamic status!</h1>
             <a href="aviateapp.eu.org">Try aviate!</a>
         </article>
+    </div> -->
+    <a href="https://github.com/JaydenDev">
+        <div id="verstring" class="hover:underline fixed bottom-0 rounded-full left-0 p-2 m-2 text-white w-fit bg-blue-500 ">
+            <p>JaydenDev</p>
+        </div>
+    </a>
+    <div id="verstring" class="fixed bottom-0 rounded-full right-0 p-2 m-2 text-white w-fit bg-blue-500 ">
+        <p>v0.3.1</p>
     </div>
 </body>
 
