--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
                 </div>
                 <p class="text-2xl text-center " onClick="refreshStat() " id="motd" class="text-3xl "></p>
             </div>
-            <div class="bg-indigo-500 rounded-lg m-auto w-fit my-3 p-1 text-white ">
+            <div class="bg-indigo-500 rounded-md m-auto w-fit my-3 p-2 text-white ">
                 <p id="signature"></p>
+            </div>
+            <div class="bg-indigo-600 rounded-md m-auto w-fit my-3 p-2 text-white ">
+                <p><b>New!</b> Your aviate status will be displayed below!</p>
+                <p id="aviate"></p>
             </div>
             <div class="bg-red-500 m-auto w-fit my-3 rounded-full p-1 text-white flex ">
                 <label>Favorite Topic:</label>&nbsp;
@@ -40,15 +44,15 @@
             </div>
         </div>
     </div>
-    <!-- <div id="popup" class="fixed bottom-0 m-2 p-2 animate-bounce text-white left:0 w-fit bg-indigo-500 rounded-md shadow-sm ">
+    <div id="popup" class="fixed bottom-0 m-2 p-2 animate-bounce text-white left:0 w-fit bg-indigo-500 rounded-md shadow-sm ">
         <article>
             <button onClick="closePopup()" class="text-white rounded-sm ">X</button>
             <h1>Get a dynamic status!</h1>
             <a href="aviateapp.eu.org">Try aviate!</a>
         </article>
-    </div> -->
+    </div>
     <div id="verstring" class="fixed bottom-0 rounded-full right-0 p-2 m-2 text-white w-fit bg-blue-500 ">
-        <p>v0.3.1</p>
+        <p>v0.3.2</p>
     </div>
 </body>
 
