--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <p id="novalerr" class="my-3 bg-blue-500 rounded-full text-white w-fit m-auto p-1 text-1xl text-center">No user is set, when you type in a user and press enter the information will appear</p>
     <div id="usercontent" class="m-auto invisible">
         <div class=" w-screen" id="header">
-            <div id="changethiscolor" class=" text-white bg-blue-500 ">&nbsp;
+            <div id="changethiscolor" class=" text-white ">&nbsp;
                 <div class="flex">
-                    <img class="rounded-full " height="30 " width="70 " id="pfp"></img>&nbsp;
-                    <h1 class="bg-white rounded-full p-3 text-4xl my-auto " id="username"></h1>
+                    <img class="rounded-full mx-2 " height="30 " width="70 " id="pfp"></img>&nbsp;
+                    <h1 class="rounded-full p-3 text-4xl my-auto bg-gray-200" id="username"></h1>
                 </div>
                 <p class="text-2xl text-center " onClick="refreshStat() " id="motd" class="text-3xl "></p>
             </div>
-            <div class="bg-indigo-500 rounded-md m-auto w-fit my-3 p-2 text-white ">
+            <div class="bg-indigo-500 rounded-md m-auto w-80 my-3 p-2 text-white ">
                 <p id="signature"></p>
             </div>
             <div class="bg-indigo-600 rounded-md m-auto w-fit my-3 p-2 text-white ">
