--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <img class="rounded-full mx-2 " height="30 " width="70 " id="pfp"></img>&nbsp;
                     <h1 class="rounded-full p-3 text-4xl my-auto bg-gray-200" id="username"></h1>
                 </div>
-                <p class="text-2xl text-center " onClick="refreshStat() " id="motd" class="text-3xl "></p>
+                <p class="text-2xl text-center text-black w-fit bg-gray-200 rounded-lg m-auto p-3" onClick="refreshStat() " id="motd" class="text-3xl "></p>
             </div>
             <div class="bg-indigo-500 rounded-md m-auto w-80 my-3 p-2 text-white ">
                 <p id="signature"></p>
