--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="p-3 bg-opacity-20 backdrop-blur-xl bg-blue-500 text-white" id="header">
         <h1>MyScratchPage</h1>
     </div>
-    <input class="bg-gray-200 rounded-b-lg m-auto p-3 w-full outline-0" id="input" type="text" placeholder="Username">
+    <input class="bg-gray-200 rounded-b-lg m-auto p-3 w-[90%] outline-0" id="input" type="text" placeholder="Username"><button id="go" class="bg-blue-500 rounded-b-lg m-auto p-3 text-white w-[10%] outline-0">Go</button>
     <br>
     <p id="novalerr" class="my-3 bg-blue-500 rounded-full text-white w-fit m-auto p-1 text-1xl text-center">No user is set, when you type in a user and press enter the information will appear</p>
     <div id="usercontent" class="m-auto invisible">
