--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                     <div class="flex">
                         <img class="rounded-full mx-2 " height="30 " width="70 " id="pfp"></img>&nbsp;
                         <h1 class="rounded-full p-3 text-4xl my-auto bg-gray-200" id="username"></h1>&nbsp;
-                        <p class="text-2xl text-center text-black w-fit bg-gray-200 rounded-lg m-auto p-1" onClick="refreshStat() " id="motd" class="text-3xl "></p>
-
+                        <p class="text-2xl text-center text-black w-fit bg-gray-200 rounded-lg m-auto p-1" id="motd" class="text-3xl "></p>&nbsp;
+                        <button onClick="refreshStat()" class="bg-blue-500 rounded-full m-auto p-3" id="logout">Refresh</button>
                     </div>
                 </div>
             </div>
