--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <div id="verstring" class="fixed bottom-0 rounded-full right-0 p-2 m-2 text-white w-fit bg-blue-500 ">
         <p>v0.3.3</p>
     </div>
+    <script src="./urlArgs.js"></script>
 </body>
 
 </html>
