Fix issues related to long statuses and signatures

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                     </div>
                 </div>
             </div>
-            <div class="bg-indigo-500 rounded-md m-auto w-80 my-3 p-2 text-white ">
+            <div class="bg-indigo-500 rounded-md m-auto md:w-40 lg:w-80 my-3 p-2 text-white ">
                 <p id="signature"></p>
             </div>
-            <div class="bg-indigo-600 rounded-md m-auto w-fit my-3 p-2 text-white">
+            <div class="bg-indigo-600 lg:w-1/2 rounded-md m-auto w-fit my-3 p-2 text-white">
                 <p><b>New!</b> Your aviate status will be displayed below!</p>
                 <p id="aviate"></p>
             </div>
