--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p id="novalerr" class="my-3 bg-blue-500 rounded-full text-white w-fit m-auto p-1 text-1xl text-center">No user is set, when you type in a user and press enter the information will appear</p>
     <div id="usercontent" class="m-auto invisible">
         <div class=" w-screen" id="header">
-            <div class="flex">
+            <div id="fetchContentArea" class="flex">
                 <div id="changethiscolor" class=" text-white ">&nbsp;
                     <div class="flex">
                         <img class="rounded-full mx-2 " height="30 " width="70 " id="pfp"></img>&nbsp;
