--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <div id="popup" class="bg-opacity-50 backdrop-blur-3xl fixed bottom-0 m-2 p-2 animate-bounce text-white left:0 w-fit bg-indigo-500 rounded-md shadow-sm ">
         <article>
             <button onClick="closePopup()" class="text-white rounded-sm ">X</button>
-            <h1>Get a dynamic status!</h1>
-            <a href="aviateapp.eu.org">Try aviate!</a>
+            <h1>Support for smart watches will end soon!</h1>
+           <p>Mobile compatibility will increase, but support for watches will be dropped</p>
         </article>
     </div>
     <div id="verstring" class="fixed bottom-0 rounded-full right-0 p-2 m-2 text-white w-fit bg-blue-500 ">
