--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyScratchPage</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="global.obf.js"></script>
+    <script src="global.js"></script>
     <link rel="shortcut icon" href="https://jdev.eu.org/img/browser/favicon.png">
     <link rel="stylesheet" href="tw.css">
 </head>
@@ -40,7 +40,7 @@
         </div>
         <div class="text-4xl bg-gray-600 p-3 rounded-sm my-3 m-2"><p id="signature"></p></div>
     </div>
-    <script src="./startup.obf.js"></script>
+    <script src="./startup.js"></script>
 </body>
 
 </html>
